fix: overflow absolute image card

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,12 @@
 main {
-	height: 100vh;
+	height: 100%;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
-	/* margin: 0;
-	padding: 0; */
-	/* height: 100vh;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between; */
 }
 
-main center {
-	/* height: 100%; */
+center {
+	flex: 1;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
