--- a/src/Card.css
+++ b/src/Card.css
@@ -1,6 +1,7 @@
 @import './global.css';
 
 .card {
+    position: relative;
     font-size: var(--font-size-three);
     padding: var(--space-one);
     width: 6rem;
@@ -10,8 +11,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    overflow: hidden;
 }
 
 .card > * {
@@ -43,13 +43,15 @@
 
 .card img {
     position: absolute;
-    width: var(--space-six);
-    width: 12rem;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     z-index: 0;
 }
 
 .card .text {
-    height: 100%;
+    flex: 1;
     color: green;
     background-color: rgba(0, 0, 120, 0.5);;
     /* backdrop-filter: blur(10px); */
